testsuite/tests/polykinds/T13985.stderr

T13985.hs:12:1: error:
    • Type variable ‘k’ is mentioned in the RHS,
        but not bound on the LHS of the family instance
    • In the data instance declaration for ‘Fam’

T13985.hs:15:15: error:
    • Type variable ‘a’ is mentioned in the RHS,
        but not bound on the LHS of the family instance
    • In the type instance declaration for ‘T’

T13985.hs:22:3: error:
    • Type variable ‘k’ is mentioned in the RHS,
        but not bound on the LHS of the family instance
    • In the data instance declaration for ‘CD’
      In the instance declaration for ‘C Type’

T13985.hs:23:8: error:
    • Type variable ‘a’ is mentioned in the RHS,
        but not bound on the LHS of the family instance
    • In the type instance declaration for ‘CT’
      In the instance declaration for ‘C Type’

T13985.hs:27:3: error:
    • Type variable ‘x’ is mentioned in the RHS,
        but not bound on the LHS of the family instance
    • In the default type instance declaration for ‘ZT’
      In the class declaration for ‘Z’
